# CS-251

Outlab 10/: average_runs.py
Outlab4/Task2/: choice.py  new_int.p
Outlab4/Task3/: analysis.py  convert.py  merge.py  transformed.csv
Outlab4/Task4/: kfctest2.py  menu.py  menuitem.py  setmenu.py
Outlab4/Task6/: teams.py
Outlab4/Task7/: ang.out  euler.out  inc.py  lsref.py  quaternion.out  use_inc.py  vec.out
outlab11/P1/: segment.py
outlab11/P2/: scatter.py  scatter_bin.py  scatter_quad.py
outlab11/P3/: contr.py  hists.py
outlab5/P1/: CMakeLists.txt  rawmake
outlab5/P3/: Makefile  depend.cpp  execution_times  main  main.cpp
outlab7/: index.html  problem3.js
